--- a/go-psite/service.yaml
+++ b/go-psite/service.yaml
@@ -2,11 +2,16 @@ apiVersion: v1
 kind: Service
 metadata:
   name: go-app
+  namespace: test-app
+  labels:
+    app: go-app
 spec:
+  type: NodePort
+  ports:
+  - port: 8081
+    targetPort: 3000
+    nodePort: 32333
+    protocol: TCP
+    name: http
   selector:
     app: go-app
-  ports:
-    - protocol: TCP
-      port: 32333
-      targetPort: 3000
-    type: NodePort
